<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- 
     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoggerActivity" >

  
    <Button
        android:id="@+id/Stop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Start"
        android:layout_marginRight="53dp"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/Start"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:layout_toLeftOf="@+id/Stop"
        android:text="@string/button_start" />
     -->
    

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/optState"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="92dp"
        android:text="@string/txt_currently"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="53dp"
        android:text="@string/txt_optimization"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/optState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="33dp" >

        <RadioButton
            android:id="@+id/optNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opt_none" />

        <RadioButton
            android:id="@+id/optPerf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_perf" />

        <RadioButton
            android:id="@+id/optPow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_pow" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/TextView01"
        android:text="@string/toggle_button" />

</RelativeLayout>